fix: align footer logo to top of first line on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1186,6 +1186,10 @@ input[type="color"]::-webkit-color-swatch {
     display: inline;
   }
 
+  .footer {
+    align-items: flex-start;
+  }
+
   .footer .footer-copyright-break {
     display: block;
   }
